--- a/src/global.less
+++ b/src/global.less
@@ -7,7 +7,10 @@ body {
   padding: 0;
   margin: 0;
   font-size: calc(100vw / 1920);
+ font-family: Poppins-SemiBold;
+
 }
+
 
 
 // 骨架屏
@@ -39,7 +42,7 @@ body {
   .loading-img {
     width: 24px;
     height: 24px;
-    background: url(./assets/img/common/loading.png) no-repeat;
+    // background: url(./assets/img/common/loading.png) no-repeat;
     background-size: contain;
     animation: blockLoadingAnimaiton 1s linear infinite;
   }
