--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -46,8 +46,49 @@
         >span{
             font-size: 16rem;
         }
+        margin-bottom: 50rem;
     }
     .showItem{
-        
+        display: flex;
+        margin-bottom: 20rem;
+        .label{
+          width: 128rem;
+          margin-right: 68rem;
+          font-size: 16rem;
+          color: #14002F;
+        }
+        .inner{
+          width: 371rem;
+          border-radius: 8rem;
+          height: 36rem;
+          background: rgba(20, 0, 47, 0.1);
+          display: flex;
+          align-items: center;
+          padding-left: 16rem;
+          color: #323232;
+          font-size: 14rem;
+        }
+        .inner1{
+          width: 212rem;
+          border-radius: 8rem;
+          height: 36rem;
+          background: rgba(20, 0, 47, 0.1);
+          display: flex;
+          align-items: center;
+          padding-left: 16rem;
+          color: #323232;
+          font-size: 14rem;
+        }
+    }
+    .claimButton{
+      width: 300rem;
+      height: 54rem;
+      text-align: center;
+      line-height: 54rem;
+      font-size: 16rem;
+      color: #fff;
+      cursor: pointer;
+    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+margin: 50rem auto 0;
     }
   }
