--- a/src/pages/Show/index.less
+++ b/src/pages/Show/index.less
@@ -1,20 +1,61 @@
 .mainContent {
-    width: 100vw;
-    height: 100vh;
-    background: url(../../assets/img/common/Bg.png) no-repeat;
-    background-position: 50% center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.commonSection {
+  width: 851rem;
+  height: 760rem;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 50rem;
+  color: #14002F;
+
+  .tit {
+    font-size: 20rem;
+    margin-bottom: 8rem;
+    height: 30rem;
+    line-height: 30rem;
   }
-  
-  
-  .commonSection {
-    width: @primary-screen-width;
-    height: @primary-screen-height;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  .tit1 {
+    font-size: 14rem;
+    margin-bottom: 8rem;
+    height: 21rem;
+    line-height: 21rem;
   }
+
+  .intro {
+    font-size: 12rem;
+
+  }
+  .line{
+    width: 100%;
+    height: 1rem;
+    background: #14002F;
+    margin: 40rem 0;
+  }
+  .button{
+    width: fit-content;
+    height: 40rem;
+    line-height: 40rem;
+    padding: 0 30rem;
+    cursor: pointer;
+    color: #fff;
+    font-size: 14rem;
+    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+    margin: 20rem 0;
+  }
+  .intro1{
+    width: 355rem;
+    font-size: 11rem;
+    line-height: 16rem;
+
+  }
+}
