--- a/src/components/EmptyDom/index.less
+++ b/src/components/EmptyDom/index.less
@@ -35,5 +35,12 @@
         color: #000;
         margin: 0 auto;
         font-size: 20rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        >img{
+            width: 301rem;
+            height: 25rem;
+        }
     }
 }
