--- a/src/pages/ToConnect/index.less
+++ b/src/pages/ToConnect/index.less
@@ -12,6 +12,14 @@
   .text{
     color: #fff;
     font-size: 32rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20rem;
+    >img{
+      width: 124rem;
+      height: 110rem;
+    }
   }
   .jumpButton{
     width: 306rem;
