--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -68,11 +68,16 @@
     .start {
       font-size: 16rem;
       margin-bottom: 6rem;
+      >span{
+padding-left: 8rem;
+      }
     }
 
     .end {
       font-size: 16rem;
-
+      >span{
+        padding-left: 8rem;
+              }
     }
   }
 
@@ -100,6 +105,16 @@
         margin-right: 8rem;
       }
 
+      .button0 {
+        width: 135rem;
+        height: 43rem;
+        text-align: center;
+        line-height: 43rem;
+        font-size: 15rem;
+        background: rgba(255, 255, 255, 0.6);
+        color: #B0B0B0;
+        cursor: no-drop;
+      }
       .button {
         width: 135rem;
         height: 43rem;
@@ -108,6 +123,7 @@
         font-size: 15rem;
         background: #564083;
         color: #fff;
+        cursor: pointer;
       }
 
     }
