--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -1,94 +1,144 @@
 .mainContent {
-    width: 100vw;
-    height: 100vh;
-    background: url(../../assets/img/common/Bg.png) no-repeat;
-    background-position: 50% center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.commonSection {
+  width: 850rem;
+  height: 692rem;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.innerTop {
+  height: 155rem;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  >img{
+    width: 204rem;
+    height: 84rem;
+  }
+}
+
+.content {
+  width: 567rem;
+  margin: 0 auto;
+
+  .showText {
+    color: #14002F;
+    width: 567rem;
+    height: 70rem;
+    font-size: 20rem;
+    border-bottom: 1rem solid #14002F;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
-  }
-  
-  
-  .commonSection {
-   width: 850rem;
-   height: 692rem;
-    background: rgba(255,255 ,255,0.8);
-  }
-  .innerTop{
-    height: 155rem;
-    background: #fff;
-  }
-  .content{
-    width: 567rem;
-    margin: 0 auto;
-    .showText{
-        color: #14002F;
-        width: 567rem;
-        height: 70rem;
-        font-size: 20rem;
-        border-bottom: 1rem solid #14002F;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
 
-    }
-    .showText1{
-        color: #14002F;
-        width: 567rem;
-        height: 70rem;
-        font-size: 30rem;
-        border-bottom: 1rem solid #14002F;
-        text-align: center;
-        flex-direction: column;
-        >span{
-            font-size: 16rem;
-        }
-        margin-bottom: 50rem;
-    }
-    .showItem{
-        display: flex;
-        margin-bottom: 20rem;
-        .label{
-          width: 128rem;
-          margin-right: 68rem;
-          font-size: 16rem;
-          color: #14002F;
-        }
-        .inner{
-          width: 371rem;
-          border-radius: 8rem;
-          height: 36rem;
-          background: rgba(20, 0, 47, 0.1);
-          display: flex;
-          align-items: center;
-          padding-left: 16rem;
-          color: #323232;
-          font-size: 14rem;
-        }
-        .inner1{
-          width: 212rem;
-          border-radius: 8rem;
-          height: 36rem;
-          background: rgba(20, 0, 47, 0.1);
-          display: flex;
-          align-items: center;
-          padding-left: 16rem;
-          color: #323232;
-          font-size: 14rem;
-        }
-    }
-    .claimButton{
-      width: 300rem;
-      height: 54rem;
-      text-align: center;
-      line-height: 54rem;
+  }
+
+  .showText1 {
+    color: #14002F;
+    width: 567rem;
+    height: 70rem;
+    font-size: 30rem;
+    border-bottom: 1rem solid #14002F;
+    text-align: center;
+    flex-direction: column;
+
+    >span {
       font-size: 16rem;
-      color: #fff;
-      cursor: pointer;
-    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-margin: 50rem auto 0;
+    }
+
+    margin-bottom: 50rem;
+  }
+
+  .showText0 {
+    color: #C52929;
+    width: 567rem;
+    height: 70rem;
+    font-size: 30rem;
+    border-bottom: 1rem solid #14002F;
+    text-align: center;
+    flex-direction: column;
+
+    >span {
+      font-size: 16rem;
+      color: #14002F;
+    }
+
+    margin-bottom: 50rem;
+  }
+
+  .showItem {
+    display: flex;
+    margin-bottom: 20rem;
+
+    .label {
+      width: 128rem;
+      margin-right: 68rem;
+      font-size: 16rem;
+      color: #14002F;
+    }
+
+    .inner {
+      width: 371rem;
+      border-radius: 8rem;
+      height: 36rem;
+      background: rgba(20, 0, 47, 0.1);
+      display: flex;
+      align-items: center;
+      padding-left: 16rem;
+      color: #323232;
+      font-size: 12rem;
+      border: none;
+      outline: none;
+      
+    }
+
+    .inner1 {
+      width: 212rem;
+      border-radius: 8rem;
+      height: 36rem;
+      background: rgba(20, 0, 47, 0.1);
+      display: flex;
+      align-items: center;
+      padding-left: 16rem;
+      color: #323232;
+      font-size: 14rem;
     }
   }
+
+  .claimButton {
+    width: 300rem;
+    height: 54rem;
+    text-align: center;
+    line-height: 54rem;
+    font-size: 16rem;
+    color: #fff;
+    cursor: pointer;
+    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+    margin: 50rem auto 0;
+  }
+
+  .claimButtonDis {
+    width: 300rem;
+    height: 54rem;
+    text-align: center;
+    line-height: 54rem;
+    font-size: 16rem;
+    color: #fff;
+    cursor: pointer;
+    background: #A19FA9;
+    margin: 50rem auto 0;
+  }
+}
