--- a/src/pages/Show/index.less
+++ b/src/pages/Show/index.less
@@ -35,11 +35,20 @@
     font-size: 12rem;
 
   }
+  .imgShow{
+    width: 256rem;
+    height: 137rem;
+    margin: 10rem 0 20rem 0;
+    >img{
+      width: 256rem;
+      height: 137rem;
+    }
+  }
   .line{
     width: 100%;
     height: 1rem;
     background: #14002F;
-    margin: 40rem 0;
+    margin: 20rem 0;
   }
   .button{
     width: fit-content;
@@ -57,5 +66,19 @@
     font-size: 11rem;
     line-height: 16rem;
 
+  }
+  .item3{
+    position: relative;
+    .item3Con{
+      position: absolute;
+      top: 30rem;
+      left: 395rem;
+      .showImg{
+        margin: 10rem 0;
+        .show2{
+          margin-right: 5rem;
+        }
+      }
+    }
   }
 }
