add loagin and list

--- a/src/global.less
+++ b/src/global.less
@@ -6,7 +6,7 @@ body {
   color: @primary-font-color;
   padding: 0;
   margin: 0;
-  font-size: calc(100vw / 1920);
+  // font-size: calc(100vw / 1920);
  font-family: Poppins-SemiBold;
 
 }
