--- a/src/pages/Show/index.less
+++ b/src/pages/Show/index.less
@@ -12,71 +12,71 @@
 
 
 .commonSection {
-  width: 851rem;
-  height: 760rem;
+  width: 851px;
+  height: 760px;
   background: rgba(255, 255, 255, 0.8);
-  padding: 50rem;
+  padding: 50px;
   color: #14002F;
 
   .tit {
-    font-size: 20rem;
-    margin-bottom: 8rem;
-    height: 30rem;
-    line-height: 30rem;
+    font-size: 20px;
+    margin-bottom: 8px;
+    height: 30px;
+    line-height: 30px;
   }
   .tit1 {
-    font-size: 14rem;
-    margin-bottom: 8rem;
-    height: 21rem;
-    line-height: 21rem;
+    font-size: 14px;
+    margin-bottom: 8px;
+    height: 21px;
+    line-height: 21px;
   }
 
   .intro {
-    font-size: 12rem;
+    font-size: 12px;
 
   }
   .imgShow{
-    width: 256rem;
-    height: 137rem;
-    margin: 10rem 0 20rem 0;
+    width: 256px;
+    height: 137px;
+    margin: 10px 0 20px 0;
     >img{
-      width: 256rem;
-      height: 137rem;
+      width: 256px;
+      height: 137px;
     }
   }
   .line{
     width: 100%;
-    height: 1rem;
+    height: 1px;
     background: #14002F;
-    margin: 20rem 0;
+    margin: 20px 0;
   }
   .button{
     width: fit-content;
-    height: 40rem;
-    line-height: 40rem;
-    padding: 0 30rem;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 30px;
     cursor: pointer;
     color: #fff;
-    font-size: 14rem;
+    font-size: 14px;
     background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-    margin: 20rem 0;
+    margin: 20px 0;
   }
   .intro1{
-    width: 355rem;
-    font-size: 11rem;
-    line-height: 16rem;
+    width: 355px;
+    font-size: 11px;
+    line-height: 16px;
 
   }
   .item3{
     position: relative;
     .item3Con{
       position: absolute;
-      top: 30rem;
-      left: 395rem;
+      top: 30px;
+      left: 395px;
       .showImg{
-        margin: 10rem 0;
+        margin: 10px 0;
         .show2{
-          margin-right: 5rem;
+          margin-right: 5px;
         }
       }
     }
