--- a/src/pages/ToConnect/index.less
+++ b/src/pages/ToConnect/index.less
@@ -11,28 +11,28 @@
   }
   .text{
     color: #fff;
-    font-size: 32rem;
+    font-size: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20rem;
+    margin-bottom: 20px;
     >img{
-      width: 124rem;
-      height: 110rem;
+      width: 124px;
+      height: 110px;
     }
   }
   .jumpButton{
-    width: 306rem;
-    height: 83rem;
+    width: 306px;
+    height: 83px;
     background: linear-gradient(to right, #BB5DF8, #4FEAFF);
     text-align: center;
     cursor: pointer;
-    font-size: 20rem;
+    font-size: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     div{
-        font-size: 14rem;
+        font-size: 14px;
     }
   }
