--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -12,33 +12,33 @@
 
 
 .commonSection {
-  width: 850rem;
-  height: 692rem;
+  width: 850px;
+  height: 692px;
   background: rgba(255, 255, 255, 0.8);
 }
 
 .innerTop {
-  height: 155rem;
+  height: 155px;
   background: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   >img{
-    width: 204rem;
-    height: 84rem;
+    width: 204px;
+    height: 84px;
   }
 }
 
 .content {
-  width: 567rem;
+  width: 567px;
   margin: 0 auto;
 
   .showText {
     color: #14002F;
-    width: 567rem;
-    height: 70rem;
-    font-size: 20rem;
-    border-bottom: 1rem solid #14002F;
+    width: 567px;
+    height: 70px;
+    font-size: 20px;
+    border-bottom: 1px solid #14002F;
     display: flex;
     align-items: center;
     text-align: center;
@@ -48,97 +48,97 @@
 
   .showText1 {
     color: #14002F;
-    width: 567rem;
-    height: 70rem;
-    font-size: 30rem;
-    border-bottom: 1rem solid #14002F;
+    width: 567px;
+    height: 70px;
+    font-size: 30px;
+    border-bottom: 1px solid #14002F;
     text-align: center;
     flex-direction: column;
 
     >span {
-      font-size: 16rem;
+      font-size: 16px;
     }
 
-    margin-bottom: 50rem;
+    margin-bottom: 50px;
   }
 
   .showText0 {
     color: #C52929;
-    width: 567rem;
-    height: 70rem;
-    font-size: 30rem;
-    border-bottom: 1rem solid #14002F;
+    width: 567px;
+    height: 70px;
+    font-size: 30px;
+    border-bottom: 1px solid #14002F;
     text-align: center;
     flex-direction: column;
 
     >span {
-      font-size: 16rem;
+      font-size: 16px;
       color: #14002F;
     }
 
-    margin-bottom: 50rem;
+    margin-bottom: 50px;
   }
 
   .showItem {
     display: flex;
-    margin-bottom: 20rem;
+    margin-bottom: 20px;
 
     .label {
-      width: 128rem;
-      margin-right: 68rem;
-      font-size: 16rem;
+      width: 128px;
+      margin-right: 68px;
+      font-size: 16px;
       color: #14002F;
     }
 
     .inner {
-      width: 371rem;
-      border-radius: 8rem;
-      height: 36rem;
+      width: 371px;
+      border-radius: 8px;
+      height: 36px;
       background: rgba(20, 0, 47, 0.1);
       display: flex;
       align-items: center;
-      padding-left: 16rem;
+      padding-left: 16px;
       color: #323232;
-      font-size: 12rem;
+      font-size: 12px;
       border: none;
       outline: none;
       
     }
 
     .inner1 {
-      width: 212rem;
-      border-radius: 8rem;
-      height: 36rem;
+      width: 212px;
+      border-radius: 8px;
+      height: 36px;
       background: rgba(20, 0, 47, 0.1);
       display: flex;
       align-items: center;
-      padding-left: 16rem;
+      padding-left: 16px;
       color: #323232;
-      font-size: 14rem;
+      font-size: 14px;
     }
   }
 
   .claimButton {
-    width: 300rem;
-    height: 54rem;
+    width: 300px;
+    height: 54px;
     text-align: center;
-    line-height: 54rem;
-    font-size: 16rem;
+    line-height: 54px;
+    font-size: 16px;
     color: #fff;
     cursor: pointer;
     background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-    margin: 50rem auto 0;
+    margin: 50px auto 0;
   }
 
   .claimButtonDis {
-    width: 300rem;
-    height: 54rem;
+    width: 300px;
+    height: 54px;
     text-align: center;
-    line-height: 54rem;
-    font-size: 16rem;
+    line-height: 54px;
+    font-size: 16px;
     color: #fff;
     cursor: pointer;
     background: #A19FA9;
-    margin: 50rem auto 0;
+    margin: 50px auto 0;
   }
 }
