--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -21,20 +21,20 @@
 
 .tabs {
   display: flex;
-  height: 45rem;
-  margin-bottom: 3rem;
+  height: 45px;
+  margin-bottom: 3px;
 
   >div {
-    width: 160rem;
-    height: 45rem;
-    font-size: 20rem;
+    width: 160px;
+    height: 45px;
+    font-size: 20px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #BB2ADA;
     background: #fff;
-    margin-right: 8rem;
+    margin-right: 8px;
   }
 
   .active {
@@ -47,36 +47,36 @@
   flex: 1;
   overflow-y: scroll;
   background: rgba(255, 255, 255, 0.8);
-  padding: 0 50rem 50rem 50rem;
+  padding: 0 50px 50px 50px;
   color: #000;
 }
 
 .itemDom {
   display: flex;
-  padding: 50rem;
-  border-bottom: 1rem solid #000;
+  padding: 50px;
+  border-bottom: 1px solid #000;
 
   .leftDom {
-    margin-right: 50rem;
+    margin-right: 50px;
 
     img {
-      width: 204rem;
-      height: 86rem;
-      margin-bottom: 12rem;
+      width: 204px;
+      height: 86px;
+      margin-bottom: 12px;
     }
 
     .start {
-      font-size: 16rem;
-      margin-bottom: 6rem;
+      font-size: 16px;
+      margin-bottom: 6px;
       >span{
-padding-left: 8rem;
+padding-left: 8px;
       }
     }
 
     .end {
-      font-size: 16rem;
+      font-size: 16px;
       >span{
-        padding-left: 8rem;
+        padding-left: 8px;
               }
     }
   }
@@ -88,10 +88,10 @@ padding-left: 8rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 20rem;
+      margin-bottom: 20px;
 
       .tit {
-        font-size: 32rem;
+        font-size: 32px;
       }
 
       >span {
@@ -100,27 +100,27 @@ padding-left: 8rem;
       }
 
       .show {
-        font-size: 14rem;
+        font-size: 14px;
         color: #F71111;
-        margin-right: 8rem;
+        margin-right: 8px;
       }
 
       .button0 {
-        width: 135rem;
-        height: 43rem;
+        width: 135px;
+        height: 43px;
         text-align: center;
-        line-height: 43rem;
-        font-size: 15rem;
+        line-height: 43px;
+        font-size: 15px;
         background: rgba(255, 255, 255, 0.6);
         color: #B0B0B0;
         cursor: no-drop;
       }
       .button {
-        width: 135rem;
-        height: 43rem;
+        width: 135px;
+        height: 43px;
         text-align: center;
-        line-height: 43rem;
-        font-size: 15rem;
+        line-height: 43px;
+        font-size: 15px;
         background: #564083;
         color: #fff;
         cursor: pointer;
@@ -129,7 +129,7 @@ padding-left: 8rem;
     }
 
     .des {
-      font-size: 16rem;
+      font-size: 16px;
     }
   }
 }
