--- a/src/components/EmptyDom/index.less
+++ b/src/components/EmptyDom/index.less
@@ -6,41 +6,41 @@
     align-items: center;
     justify-content: center;
     .text {
-        font-size: 16rem;
-        width: 384rem;
-        margin: 0 auto 20rem;
+        font-size: 16px;
+        width: 384px;
+        margin: 0 auto 20px;
         text-align: center;
     }
 
     .button {
-        width: 280rem;
-        height: 60rem;
+        width: 280px;
+        height: 60px;
         background: linear-gradient(to right, #BB5DF8, #4FEAFF);
         text-align: center;
-        line-height: 60rem;
+        line-height: 60px;
         cursor: pointer;
         margin: 0 auto;
         color: #fff;
-        font-size: 20rem;
+        font-size: 20px;
     }
 
     .button1 {
-        width: 460rem;
-        height: 60rem;
+        width: 460px;
+        height: 60px;
         border: 1px solid;
         border-image: linear-gradient(to right, #BB5DF8, #4FEAFF) 1;
         text-align: center;
-        line-height: 60rem;
+        line-height: 60px;
         cursor: pointer;
         color: #000;
         margin: 0 auto;
-        font-size: 20rem;
+        font-size: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
         >img{
-            width: 301rem;
-            height: 25rem;
+            width: 301px;
+            height: 25px;
         }
     }
 }
