--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -8,7 +8,7 @@
   
   .loginBox {
     background-color: white;
-    padding: 2rem;
+    padding: 2px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -17,26 +17,26 @@
   
   .title {
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5px;
     color: #1890ff;
-    font-size: 1.5rem;
+    font-size: 1.5px;
   }
   
   .inputGroup {
-    margin-bottom: 1rem;
+    margin-bottom: 1px;
   
     label {
       display: block;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.5px;
       color: #333;
     }
   
     input {
       width: 100%;
-      padding: 0.5rem;
+      padding: 0.5px;
       border: 1px solid #d9d9d9;
       border-radius: 4px;
-      font-size: 1rem;
+      font-size: 1px;
       color: #000;
   
       &:focus {
@@ -49,12 +49,12 @@
   
   .loginButton {
     width: 100%;
-    padding: 0.5rem;
+    padding: 0.5px;
     background-color: #1890ff;
     color: white;
     border: none;
     border-radius: 4px;
-    font-size: 1rem;
+    font-size: 1px;
     cursor: pointer;
     transition: background-color 0.3s;
   
