--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,3 +1,136 @@
+.mobile {
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  .commonSection {
+    width: @primary-screen-width-mobile;
+    height: @primary-screen-height-mobile;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 50px 16px;
+  }
+
+  .tabs {
+    display: flex;
+    height: 45px;
+    margin-bottom: 20px;
+
+    >div {
+      width: 160px;
+      height: 45px;
+      font-size: 20px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #BB2ADA;
+      background: #fff;
+      margin-right: 8px;
+    }
+
+    .active {
+      color: #fff;
+      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+    }
+  }
+
+  .content {
+    flex: 1;
+    overflow-y: scroll;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 0 16px 0px 16px;
+    color: #000;
+  }
+
+  .itemDom {
+    padding: 20px 0;
+    border-bottom: 1px solid #000;
+
+    .leftDom {
+      margin-bottom: 16px;
+
+      img {
+        width: 204px;
+        height: 86px;
+        margin-bottom: 12px;
+      }
+
+      .start {
+        font-size: 16px;
+        margin-bottom: 6px;
+
+        >span {
+          padding-left: 8px;
+        }
+      }
+
+      .end {
+        font-size: 16px;
+
+        >span {
+          padding-left: 8px;
+        }
+      }
+    }
+
+    .rightDom {
+      flex: 1;
+
+      .titDom {
+        margin-bottom: 20px;
+
+        .tit {
+          font-size: 32px;
+        }
+
+        >span {
+          display: flex;
+          align-items: center;
+        }
+
+        .show {
+          font-size: 14px;
+          color: #F71111;
+          margin-right: 8px;
+        }
+
+        .button0 {
+          width: 135px;
+          height: 43px;
+          text-align: center;
+          line-height: 43px;
+          font-size: 15px;
+          background: rgba(255, 255, 255, 0.6);
+          color: #B0B0B0;
+          cursor: no-drop;
+        }
+
+        .button {
+          width: 135px;
+          height: 43px;
+          text-align: center;
+          line-height: 43px;
+          font-size: 15px;
+          background: #564083;
+          color: #fff;
+          cursor: pointer;
+        }
+
+      }
+
+      .des {
+        font-size: 16px;
+        word-wrap: break-word;
+      }
+    }
+  }
+}
+
 .mainContent {
   width: 100vw;
   height: 100vh;
@@ -8,128 +141,130 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-
-.commonSection {
-  width: @primary-screen-width;
-  height: @primary-screen-height;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.tabs {
-  display: flex;
-  height: 45px;
-  margin-bottom: 3px;
-
-  >div {
-    width: 160px;
-    height: 45px;
-    font-size: 20px;
-    cursor: pointer;
+  .commonSection {
+    width: @primary-screen-width;
+    height: @primary-screen-height;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #BB2ADA;
-    background: #fff;
-    margin-right: 8px;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
-  .active {
-    color: #fff;
-    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-  }
-}
+  .tabs {
+    display: flex;
+    height: 45px;
+    margin-bottom: 3px;
 
-.content {
-  flex: 1;
-  overflow-y: scroll;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 0 50px 50px 50px;
-  color: #000;
-}
-
-.itemDom {
-  display: flex;
-  padding: 50px;
-  border-bottom: 1px solid #000;
-
-  .leftDom {
-    margin-right: 50px;
-
-    img {
-      width: 204px;
-      height: 86px;
-      margin-bottom: 12px;
-    }
-
-    .start {
-      font-size: 16px;
-      margin-bottom: 6px;
-      >span{
-padding-left: 8px;
-      }
-    }
-
-    .end {
-      font-size: 16px;
-      >span{
-        padding-left: 8px;
-              }
-    }
-  }
-
-  .rightDom {
-    flex: 1;
-
-    .titDom {
+    >div {
+      width: 160px;
+      height: 45px;
+      font-size: 20px;
+      cursor: pointer;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
-
-      .tit {
-        font-size: 32px;
-      }
-
-      >span {
-        display: flex;
-        align-items: center;
-      }
-
-      .show {
-        font-size: 14px;
-        color: #F71111;
-        margin-right: 8px;
-      }
-
-      .button0 {
-        width: 135px;
-        height: 43px;
-        text-align: center;
-        line-height: 43px;
-        font-size: 15px;
-        background: rgba(255, 255, 255, 0.6);
-        color: #B0B0B0;
-        cursor: no-drop;
-      }
-      .button {
-        width: 135px;
-        height: 43px;
-        text-align: center;
-        line-height: 43px;
-        font-size: 15px;
-        background: #564083;
-        color: #fff;
-        cursor: pointer;
-      }
-
+      justify-content: center;
+      color: #BB2ADA;
+      background: #fff;
+      margin-right: 8px;
     }
 
-    .des {
-      font-size: 16px;
+    .active {
+      color: #fff;
+      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+    }
+  }
+
+  .content {
+    flex: 1;
+    overflow-y: scroll;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 0 50px 50px 50px;
+    color: #000;
+  }
+
+  .itemDom {
+    display: flex;
+    padding: 50px;
+    border-bottom: 1px solid #000;
+
+    .leftDom {
+      margin-right: 50px;
+
+      img {
+        width: 204px;
+        height: 86px;
+        margin-bottom: 12px;
+      }
+
+      .start {
+        font-size: 16px;
+        margin-bottom: 6px;
+
+        >span {
+          padding-left: 8px;
+        }
+      }
+
+      .end {
+        font-size: 16px;
+
+        >span {
+          padding-left: 8px;
+        }
+      }
+    }
+
+    .rightDom {
+      flex: 1;
+
+      .titDom {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+
+        .tit {
+          font-size: 32px;
+        }
+
+        >span {
+          display: flex;
+          align-items: center;
+        }
+
+        .show {
+          font-size: 14px;
+          color: #F71111;
+          margin-right: 8px;
+        }
+
+        .button0 {
+          width: 135px;
+          height: 43px;
+          text-align: center;
+          line-height: 43px;
+          font-size: 15px;
+          background: rgba(255, 255, 255, 0.6);
+          color: #B0B0B0;
+          cursor: no-drop;
+        }
+
+        .button {
+          width: 135px;
+          height: 43px;
+          text-align: center;
+          line-height: 43px;
+          font-size: 15px;
+          background: #564083;
+          color: #fff;
+          cursor: pointer;
+        }
+
+      }
+
+      .des {
+        font-size: 16px;
+      }
     }
   }
 }
