--- a/src/components/EmptyDom/index.less
+++ b/src/components/EmptyDom/index.less
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     .text {
         font-size: 16px;
         width: 384px;
@@ -38,7 +39,56 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        >img{
+
+        >img {
+            width: 301px;
+            height: 25px;
+        }
+    }
+}
+.mobileemptyDom{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .text {
+        font-size: 16px;
+        width: 200px;
+        margin: 0 auto 20px;
+        text-align: center;
+    }
+
+    .button {
+        width: 280px;
+        height: 60px;
+        background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+        text-align: center;
+        line-height: 60px;
+        cursor: pointer;
+        margin: 0 auto;
+        color: #fff;
+        font-size: 20px;
+    }
+
+    .button1 {
+        width: 360px;
+        height: 50px;
+        border: 1px solid;
+        border-image: linear-gradient(to right, #BB5DF8, #4FEAFF) 1;
+        text-align: center;
+        line-height: 60px;
+        cursor: pointer;
+        color: #000;
+        margin: 0 auto;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        >img {
             width: 301px;
             height: 25px;
         }
