--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -8,137 +8,277 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  .commonSection {
+    width: 850px;
+    height: 692px;
+    background: rgba(255, 255, 255, 0.8);
+  }
+  
+  .innerTop {
+    height: 155px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    >img{
+      width: 204px;
+      height: 84px;
+    }
+  }
+  
+  .content {
+    width: 567px;
+    margin: 0 auto;
+  
+    .showText {
+      color: #14002F;
+      width: 567px;
+      height: 70px;
+      font-size: 20px;
+      border-bottom: 1px solid #14002F;
+      display: flex;
+      align-items: center;
+      text-align: center;
+      justify-content: center;
+  
+    }
+  
+    .showText1 {
+      color: #14002F;
+      width: 567px;
+      height: 70px;
+      font-size: 30px;
+      border-bottom: 1px solid #14002F;
+      text-align: center;
+      flex-direction: column;
+  
+      >span {
+        font-size: 16px;
+      }
+  
+      margin-bottom: 50px;
+    }
+  
+    .showText0 {
+      color: #C52929;
+      width: 567px;
+      height: 70px;
+      font-size: 30px;
+      border-bottom: 1px solid #14002F;
+      text-align: center;
+      flex-direction: column;
+  
+      >span {
+        font-size: 16px;
+        color: #14002F;
+      }
+  
+      margin-bottom: 50px;
+    }
+  
+    .showItem {
+      display: flex;
+      margin-bottom: 20px;
+  
+      .label {
+        width: 128px;
+        margin-right: 68px;
+        font-size: 16px;
+        color: #14002F;
+      }
+  
+      .inner {
+        width: 371px;
+        border-radius: 8px;
+        height: 36px;
+        background: rgba(20, 0, 47, 0.1);
+        display: flex;
+        align-items: center;
+        padding-left: 16px;
+        color: #323232;
+        font-size: 12px;
+        border: none;
+        outline: none;
+        
+      }
+  
+      .inner1 {
+        width: 212px;
+        border-radius: 8px;
+        height: 36px;
+        background: rgba(20, 0, 47, 0.1);
+        display: flex;
+        align-items: center;
+        padding-left: 16px;
+        color: #323232;
+        font-size: 14px;
+      }
+    }
+  
+    .claimButton {
+      width: 300px;
+      height: 54px;
+      text-align: center;
+      line-height: 54px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+      margin: 50px auto 0;
+    }
+  
+    .claimButtonDis {
+      width: 300px;
+      height: 54px;
+      text-align: center;
+      line-height: 54px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      background: #A19FA9;
+      margin: 50px auto 0;
+    }
+  }
 }
 
-
-.commonSection {
-  width: 850px;
-  height: 692px;
-  background: rgba(255, 255, 255, 0.8);
-}
-
-.innerTop {
-  height: 155px;
-  background: #fff;
+.mobile {
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  >img{
-    width: 204px;
-    height: 84px;
+  padding: 0 16px;
+  .commonSection {
+    background: rgba(255, 255, 255, 0.8);
+    width: 100%;
   }
-}
-
-.content {
-  width: 567px;
-  margin: 0 auto;
-
-  .showText {
-    color: #14002F;
-    width: 567px;
-    height: 70px;
-    font-size: 20px;
-    border-bottom: 1px solid #14002F;
+  
+  .innerTop {
+    height: 155px;
+    background: #fff;
     display: flex;
     align-items: center;
-    text-align: center;
     justify-content: center;
-
-  }
-
-  .showText1 {
-    color: #14002F;
-    width: 567px;
-    height: 70px;
-    font-size: 30px;
-    border-bottom: 1px solid #14002F;
-    text-align: center;
-    flex-direction: column;
-
-    >span {
-      font-size: 16px;
+    >img{
+      width: 204px;
+      height: 84px;
     }
-
-    margin-bottom: 50px;
   }
-
-  .showText0 {
-    color: #C52929;
-    width: 567px;
-    height: 70px;
-    font-size: 30px;
-    border-bottom: 1px solid #14002F;
-    text-align: center;
-    flex-direction: column;
-
-    >span {
-      font-size: 16px;
+  
+  .content {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 16px;
+  
+    .showText {
       color: #14002F;
-    }
-
-    margin-bottom: 50px;
-  }
-
-  .showItem {
-    display: flex;
-    margin-bottom: 20px;
-
-    .label {
-      width: 128px;
-      margin-right: 68px;
-      font-size: 16px;
-      color: #14002F;
-    }
-
-    .inner {
-      width: 371px;
-      border-radius: 8px;
-      height: 36px;
-      background: rgba(20, 0, 47, 0.1);
+      height: 70px;
+      font-size: 20px;
+      border-bottom: 1px solid #14002F;
       display: flex;
       align-items: center;
-      padding-left: 16px;
-      color: #323232;
-      font-size: 12px;
-      border: none;
-      outline: none;
-      
+      text-align: center;
+      justify-content: center;
+  
     }
-
-    .inner1 {
-      width: 212px;
-      border-radius: 8px;
-      height: 36px;
-      background: rgba(20, 0, 47, 0.1);
-      display: flex;
-      align-items: center;
-      padding-left: 16px;
-      color: #323232;
-      font-size: 14px;
+  
+    .showText1 {
+      color: #14002F;
+      height: 70px;
+      font-size: 30px;
+      border-bottom: 1px solid #14002F;
+      text-align: center;
+      flex-direction: column;
+  
+      >span {
+        font-size: 16px;
+      }
+  
+      margin-bottom: 50px;
     }
-  }
+  
+    .showText0 {
+      color: #C52929;
+      height: 70px;
+      font-size: 30px;
+      border-bottom: 1px solid #14002F;
+      text-align: center;
+      flex-direction: column;
+  
+      >span {
+        font-size: 16px;
+        color: #14002F;
+      }
+  
+      margin-bottom: 50px;
+    }
+  
+    .showItem {
+  
+      .label {
+        font-size: 16px;
+        color: #14002F;
+        margin-bottom: 12px;
+      }
+  
+      .inner {
+        width: 100%;
+        border-radius: 8px;
+        height: 36px;
+        background: rgba(20, 0, 47, 0.1);
+        display: flex;
+        align-items: center;
+        padding-left: 16px;
+        color: #323232;
+        font-size: 12px;
+        border: none;
+        outline: none;
+        margin-bottom: 12px;
 
-  .claimButton {
-    width: 300px;
-    height: 54px;
-    text-align: center;
-    line-height: 54px;
-    font-size: 16px;
-    color: #fff;
-    cursor: pointer;
-    background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-    margin: 50px auto 0;
-  }
-
-  .claimButtonDis {
-    width: 300px;
-    height: 54px;
-    text-align: center;
-    line-height: 54px;
-    font-size: 16px;
-    color: #fff;
-    cursor: pointer;
-    background: #A19FA9;
-    margin: 50px auto 0;
+        
+      }
+  
+      .inner1 {
+        width: 100%;
+        border-radius: 8px;
+        height: 36px;
+        background: rgba(20, 0, 47, 0.1);
+        display: flex;
+        align-items: center;
+        padding-left: 16px;
+        color: #323232;
+        font-size: 14px;
+      }
+    }
+  
+    .claimButton {
+      width: 300px;
+      height: 54px;
+      text-align: center;
+      line-height: 54px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      background: linear-gradient(to right, #BB5DF8, #4FEAFF);
+      margin: 50px auto 20px;
+    }
+  
+    .claimButtonDis {
+      width: 300px;
+      height: 54px;
+      text-align: center;
+      line-height: 54px;
+      font-size: 16px;
+      color: #fff;
+      cursor: pointer;
+      background: #A19FA9;
+      margin: 50px auto 0;
+    }
   }
 }
+
+
