--- a/src/pages/Show/index.less
+++ b/src/pages/Show/index.less
@@ -82,3 +82,49 @@
     }
   }
 }
+
+.mobile{
+  width: 100vw;
+  height: 100vh;
+  background: url(../../assets/img/common/Bg.png) no-repeat;
+  background-position: 50% center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 16px;
+  .commonSection{
+    width: 100%;
+    height: auto;
+  padding: 16px;
+
+  }
+  .tit {
+    font-size: 20px;
+    margin-bottom: 8px;
+    height: auto;
+    line-height: 30px;
+  }
+  .tit1 {
+    font-size: 14px;
+    margin-bottom: 8px;
+    height: auto;
+    line-height: 21px;
+  }
+  .item3{
+    position: relative;
+    .item3Con{
+      position: relative;
+      left: 0;
+      top: 0;
+     
+      .showImg{
+        margin: 10px 0;
+        .show2{
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
