--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -172,7 +172,7 @@
   .content {
     width: 100%;
     margin: 0 auto;
-    padding: 0 16px;
+    padding: 0 16px 40px;
   
     .showText {
       color: #14002F;
@@ -264,7 +264,9 @@
       color: #fff;
       cursor: pointer;
       background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-      margin: 50px auto 20px;
+      margin: 20px auto 20px;
+      border-radius: 8px;
+
     }
   
     .claimButtonDis {
@@ -276,7 +278,8 @@
       color: #fff;
       cursor: pointer;
       background: #A19FA9;
-      margin: 50px auto 0;
+      margin: 20px auto 0;
+      border-radius: 8px;
     }
   }
 }
