--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -126,6 +126,41 @@
       .des {
         font-size: 16px;
         word-wrap: break-word;
+        margin-bottom: 12px;
+      }
+      .timer{
+        >span{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        .show{
+          font-size: 14px;
+          color: #F71111;
+        }
+        .button0{
+          width: 135px;
+          height: 43px;
+          text-align: center;
+          line-height: 43px;
+          font-size: 15px;
+          background: rgba(255, 255, 255, 0.6);
+          color: #B0B0B0;
+          cursor: no-drop;
+          border-radius: 8px;
+        }
+        .button {
+          width: 135px;
+          height: 43px;
+          text-align: center;
+          line-height: 43px;
+          font-size: 15px;
+          background: #564083;
+          color: #fff;
+          cursor: pointer;
+          border-radius: 8px;
+
+        }
       }
     }
   }
