--- a/src/pages/List/index.less
+++ b/src/pages/List/index.less
@@ -32,6 +32,11 @@
         border: none;
         cursor: pointer;
     }
+    .empty{
+        width: 100%;
+        text-align: center;
+        margin-top: 150px;
+    }
 }
 .eventevent{
     border-bottom: 1px solid #000;
