--- a/src/pages/Upload/index.less
+++ b/src/pages/Upload/index.less
@@ -5,7 +5,7 @@
     border: 1px solid #ddd;
     border-radius: 8px;
     font-size: 16px;
-    background: #fcc;
+    // background: #fcc;
     color: #000;
     margin-top: 200px;
   
