--- a/src/pages/Upload/index.less
+++ b/src/pages/Upload/index.less
@@ -21,7 +21,10 @@
         display: block;
         margin-bottom: 5px;
       }
-  
+  .imgShow{
+    width: 204px;
+    height: 86px;
+  }
       input[type="text"],
       input[type="datetime-local"],
       textarea {
