--- a/src/pages/List/index.less
+++ b/src/pages/List/index.less
@@ -143,7 +143,7 @@
 .upload-form{
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.8);
     position: fixed;
     left: 0;
     top: 0;
@@ -158,12 +158,12 @@
         padding: 20px;
         border-radius: 8px;
         font-size: 16px;
-        // background: #fcc;
+        background: #fff;
         color: #000;
-        background: url(../../assets/img/common/Bg.png) no-repeat;
-        background-position: 50% center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        // background: url(../../assets/img/common/Bg.png) no-repeat;
+        // background-position: 50% center;
+        // background-repeat: no-repeat;
+        // background-size: cover;
       
         h2 {
           text-align: center;
