--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -167,6 +167,7 @@
 }
 
 .mainContent {
+  position: relative;
   width: 100vw;
   height: 100vh;
   background: url(../../assets/img/common/Bg.png) no-repeat;
@@ -176,7 +177,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+.float{
+  position: absolute;
+  right: 0;
+  top: 200px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #bb2a2a;
+  cursor: pointer;
+  font-size: 12px;
+  text-align: center;
+  line-height: 50px;
+  
+}
   .commonSection {
     width: @primary-screen-width;
     height: @primary-screen-height;
