--- a/src/components/EmptyDom/index.less
+++ b/src/components/EmptyDom/index.less
@@ -11,6 +11,8 @@
         width: 384px;
         margin: 0 auto 20px;
         text-align: center;
+        color: #14002f;
+        opacity: 0.4;
     }
 
     .button {
@@ -26,23 +28,24 @@
     }
 
     .button1 {
+        cursor: pointer;
         width: 460px;
         height: 60px;
-        border: 1px solid;
-        border-image: linear-gradient(to right, #BB5DF8, #4FEAFF) 1;
-        text-align: center;
-        line-height: 60px;
-        cursor: pointer;
-        color: #000;
-        margin: 0 auto;
-        font-size: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // border: 1px solid;
+        // border-image: linear-gradient(to right, #BB5DF8, #4FEAFF) 1;
+        // text-align: center;
+        // line-height: 60px;
+        // cursor: pointer;
+        // color: #000;
+        // margin: 0 auto;
+        // font-size: 20px;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
 
         >img {
-            width: 301px;
-            height: 25px;
+            width: 460px;
+        height: 60px;
         }
     }
 }
