addn admin page

--- a/src/pages/List/index.less
+++ b/src/pages/List/index.less
@@ -1,7 +1,7 @@
 .eventList {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    // padding: 20px;
     color: #000;
 
     .tabs {
@@ -11,7 +11,7 @@
         button {
             flex: 1;
             padding: 10px;
-            background-color: #f0f0f0;
+            background-color: #fff;
             border: none;
             cursor: pointer;
 
