--- a/src/pages/Upload/index.less
+++ b/src/pages/Upload/index.less
@@ -1,3 +1,11 @@
+.uploadDom{
+  width: 100%;
+  min-height: 100vh;
+  background-color: #f0f2f5;
+  padding-top: 70px;
+  padding-bottom: 70px;
+
+}
 .upload-form {
     max-width: 700px;
     margin: 0 auto;
@@ -7,7 +15,6 @@
     font-size: 16px;
     // background: #fcc;
     color: #000;
-    margin-top: 200px;
   
     h2 {
       text-align: center;
