--- a/src/components/EmptyDom/index.less
+++ b/src/components/EmptyDom/index.less
@@ -58,42 +58,34 @@
     justify-content: center;
 
     .text {
-        font-size: 16px;
+        font-size: 12px;
         width: 200px;
         margin: 0 auto 20px;
         text-align: center;
+        opacity: 0.4;
     }
 
     .button {
-        width: 280px;
-        height: 60px;
+        width: 200px;
+        height: 40px;
         background: linear-gradient(to right, #BB5DF8, #4FEAFF);
         text-align: center;
-        line-height: 60px;
+        line-height: 40px;
         cursor: pointer;
         margin: 0 auto;
         color: #fff;
-        font-size: 20px;
+        font-size: 16px;
     }
 
     .button1 {
-        width: 360px;
-        height: 50px;
-        border: 1px solid;
-        border-image: linear-gradient(to right, #BB5DF8, #4FEAFF) 1;
-        text-align: center;
-        line-height: 60px;
-        cursor: pointer;
-        color: #000;
+        width: 230px;
+        height: 30px;
         margin: 0 auto;
-        font-size: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+       
 
         >img {
-            width: 301px;
-            height: 25px;
+            width: 230px;
+            height: 30px;
         }
     }
 }
