--- a/src/pages/User/index.less
+++ b/src/pages/User/index.less
@@ -90,6 +90,15 @@ body {
     }
 
    
+
+   
+  }
+  .empty{
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    width: 100%;
+    margin: 0 auto;
   }
 }
 
