--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -31,6 +31,9 @@
       color: #BB2ADA;
       background: #fff;
       margin-right: 8px;
+      &:last-child{
+        margin-right: 0;
+      }
     }
 
     .active {
@@ -143,7 +146,7 @@
           height: 43px;
           text-align: center;
           line-height: 43px;
-          font-size: 15px;
+          font-size: 12px;
           background: rgba(255, 255, 255, 0.6);
           color: #B0B0B0;
           cursor: no-drop;
@@ -154,7 +157,7 @@
           height: 43px;
           text-align: center;
           line-height: 43px;
-          font-size: 15px;
+          font-size: 12px;
           background: #564083;
           color: #fff;
           cursor: pointer;
@@ -288,7 +291,7 @@
         }
 
         .button0 {
-          width: 135px;
+          width: 180px;
           height: 43px;
           text-align: center;
           line-height: 43px;
@@ -299,7 +302,7 @@
         }
 
         .button {
-          width: 135px;
+          width: 180px;
           height: 43px;
           text-align: center;
           line-height: 43px;
