--- a/src/pages/Show/index.less
+++ b/src/pages/Show/index.less
@@ -90,13 +90,15 @@
   background-position: 50% center;
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 16px;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  padding: 40px 16px;
+  overflow-y: scroll;
   .commonSection{
     width: 100%;
-    height: auto;
+    height: 100%;
+    overflow-y: scroll;
   padding: 16px;
 
   }
@@ -118,7 +120,7 @@
       position: relative;
       left: 0;
       top: 0;
-     
+   
       .showImg{
         margin: 10px 0;
         .show2{
@@ -127,4 +129,7 @@
       }
     }
   }
+  .intro1{
+    width:300px;
+   }
 }
