--- a/src/assets/fonts/index.less
+++ b/src/assets/fonts/index.less
@@ -27,3 +27,7 @@
   font-family: "NeueHaasDisplay-Medium";
   src: url("./NeueHaasDisplayMedium.ttf");
 }
+@font-face {
+  font-family: "MSPGothicRegular";
+  src: url("./MSPGothicRegular.ttf");
+}
