--- a/src/components/WalletConnect/index.less
+++ b/src/components/WalletConnect/index.less
@@ -6,7 +6,7 @@
   height: 60px;
   line-height: 60px;
   text-align: center;
-  font-family: Poppins-Bold;
+  // font-family: Poppins-Bold;
   font-size: 24px;
   color: #c2c5c8;
   cursor: pointer;
@@ -47,7 +47,7 @@
     background-size: 100% 100%;
   }
   .drownQuitText {
-    font-family: Poppins-SemiBold;
+    // font-family: Poppins-SemiBold;
     font-size: 24px;
     color: #c2c5c8;
     line-height: 24px;
