--- a/src/global.less
+++ b/src/global.less
@@ -7,7 +7,9 @@ body {
   padding: 0;
   margin: 0;
   // font-size: calc(100vw / 1920);
- font-family: Poppins-SemiBold;
+//  font-family: Poppins-SemiBold;
+//  font-family: MSPGothicRegular;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 
 }
 
