change text and resolve bugs

--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -233,6 +233,13 @@
     padding: 0 50px 50px 50px;
     color: #000;
   }
+  .content1 {
+    flex: 1;
+    overflow-y: scroll;
+    // background: rgba(255, 255, 255, 0.8);
+    padding: 0 50px 50px 50px;
+    color: #000;
+  }
 
   .itemDom {
     display: flex;
@@ -320,3 +327,4 @@
     }
   }
 }
+
