--- a/src/pages/Index/index.less
+++ b/src/pages/Index/index.less
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     >img{
         width: 742px;
         height: 246px;
