--- a/src/pages/Index/index.less
+++ b/src/pages/Index/index.less
@@ -15,3 +15,19 @@
     }
   }
   
+  .mobile {
+    width: 100vw;
+    height: 100vh;
+    background: url(../../assets/img/Home/Index.png) no-repeat;
+    background-position: 50% center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    >img{
+        width: 188px;
+        height: 62px;
+    }
+  }
