--- a/src/global.less
+++ b/src/global.less
@@ -10,7 +10,7 @@ body {
 //  font-family: Poppins-SemiBold;
 //  font-family: MSPGothicRegular;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-
+//  font-family: "Roboto", "游ゴシック体", "Yu Gothic", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
 }
 
 
