--- a/src/pages/ToConnect/index.less
+++ b/src/pages/ToConnect/index.less
@@ -36,3 +36,10 @@
         font-size: 14px;
     }
   }
+  .back{
+    color: #fff;
+    font-size: 23px;
+    text-align: center;
+    margin-top: 25px;
+    cursor: pointer;
+  }
