--- a/src/pages/Index/index.less
+++ b/src/pages/Index/index.less
@@ -1,7 +1,7 @@
 .mainContent {
     width: 100vw;
     height: 100vh;
-    background: url(../../assets/img/Home/Index.png) no-repeat;
+    background: url(../../assets/img/Home/Index.gif) no-repeat;
     background-position: 50% center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,7 +18,7 @@
   .mobile {
     width: 100vw;
     height: 100vh;
-    background: url(../../assets/img/Home/Index.png) no-repeat;
+    background: url(../../assets/img/Home/Index.gif) no-repeat;
     background-position: 50% center;
     background-repeat: no-repeat;
     background-size: cover;
