--- a/src/pages/Show/index.less
+++ b/src/pages/Show/index.less
@@ -17,7 +17,15 @@
   background: rgba(255, 255, 255, 0.8);
   padding: 50px;
   color: #14002F;
-
+  position: relative;
+.back{
+  position: absolute;
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  left: 0;
+  top: -30px;
+}
   .tit {
     font-size: 20px;
     margin-bottom: 8px;
