--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -114,29 +114,42 @@
         font-size: 14px;
       }
     }
+    .buttons{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 57px;
+      >div{
+        flex: 1;
+      }
   
+    }
+    .back{
+      background: #646464;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 10px;
+      height: 57px;
+      cursor: pointer;
+    }
     .claimButton {
-      width: 300px;
-      height: 54px;
       text-align: center;
-      line-height: 54px;
+      line-height: 57px;
       font-size: 16px;
       color: #fff;
       cursor: pointer;
       background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-      margin: 50px auto 0;
+      // margin: 50px auto 0;
     }
   
     .claimButtonDis {
-      width: 300px;
-      height: 54px;
       text-align: center;
-      line-height: 54px;
+      line-height: 57px;
       font-size: 16px;
       color: #fff;
       cursor: pointer;
       background: #A19FA9;
-      margin: 50px auto 0;
     }
   }
 }
@@ -254,7 +267,12 @@
         font-size: 14px;
       }
     }
-  
+  .buttons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+  }
     .claimButton {
       width: 300px;
       height: 54px;
@@ -264,7 +282,7 @@
       color: #fff;
       cursor: pointer;
       background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-      margin: 20px auto 20px;
+      // margin: 20px auto 20px;
       border-radius: 8px;
 
     }
@@ -278,7 +296,7 @@
       color: #fff;
       cursor: pointer;
       background: #A19FA9;
-      margin: 20px auto 0;
+      // margin: 20px auto 0;
       border-radius: 8px;
     }
   }
