--- a/src/pages/Claim/index.less
+++ b/src/pages/Claim/index.less
@@ -282,7 +282,7 @@
       color: #fff;
       cursor: pointer;
       background: linear-gradient(to right, #BB5DF8, #4FEAFF);
-      // margin: 20px auto 20px;
+      margin: 20px auto 20px;
       border-radius: 8px;
 
     }
@@ -296,7 +296,7 @@
       color: #fff;
       cursor: pointer;
       background: #A19FA9;
-      // margin: 20px auto 0;
+      margin: 20px auto 0;
       border-radius: 8px;
     }
   }
